--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1416,3 +1416,21 @@ body .layui-layer-we .layui-layer-btn0{
 body .layui-layer-we .layui-layer-setwin{
     color: #ffffff !important;
 }
+
+.layui-form-item.has-error label {
+    color: #e74c3c;
+}
+
+.layui-form-item.has-error .layui-input-block input,
+.layui-form-item.has-error .layui-input-block select,
+.layui-form-item.has-error .layui-input-block textarea{
+    border-color: #e74c3c;
+    box-shadow: none;
+}
+
+.layui-form-item.has-error .layui-input-block input:focus,
+.layui-form-item.has-error .layui-input-block select:focus,
+.layui-form-item.has-error .layui-input-block textarea:focus{
+    border-color: #e74c3c !important;
+    box-shadow: none;
+}
