--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -14,7 +14,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">登录账号</label>
                 <div class="layui-input-block">
-                    <input type="text" name="username" lay-verify="username" autocomplete="off" value="{$list['username']}" data-rule="required;username" placeholder="登录账号" class="layui-input">
+                    <input type="text" name="username" autocomplete="off" value="{$list['username']}" data-rule="required;username" placeholder="登录账号" class="layui-input">
                     <input type="hidden" name="id" lay-verify="id" value="{$list['id']}">
                 </div>
             </div>
