--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -24,19 +24,23 @@
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
             <form class="layui-form" action="{:url('admin/Index/login','',false)}" method="post" lay-filter="login" id="formRule">
                 <div class="layui-form-item">
+                    <label class="layui-form-label" style="display: none">用户名</label>
                     <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="username"></label>
-                    <input type="text" name="username" id="username" lay-verify="required" placeholder="用户名" class="layui-input">
+                    <input type="text" name="username" id="username" data-rule="required" placeholder="用户名" class="layui-input">
                 </div>
                 <div class="layui-form-item">
+                    <label class="layui-form-label" style="display: none">密码</label>
                     <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="password"></label>
-                    <input type="password" name="password" id="password" lay-verify="required" placeholder="密码" class="layui-input">
+                    <input type="password" name="password" id="password" data-rule="required;passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" placeholder="密码" class="layui-input">
                 </div>
                 <div class="layui-form-item">
+                    <label class="layui-form-label" style="display: none">图形验证码</label>
                     <div class="layui-row">
                         <div class="layui-col-xs7">
                             <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="captcha"></label>
-                            <input type="text" name="captcha" id="captcha" lay-verify="required" placeholder="图形验证码" class="layui-input">
+                            <input type="text" name="captcha" id="captcha" data-rule="required" placeholder="图形验证码" class="layui-input">
                         </div>
+                        <span class="msg-box n-right" for="captcha"><span role="alert" class="msg-wrap n-error"></span></span>
                         <div class="layui-col-xs5">
                             <div style="margin-left: 10px;">
                                 <img src="{:rtrim('__PUBLIC__', '/')}/captcha" class="layadmin-user-login-codeimg" id="LAY-user-get-vercode" width="100" height="36" onclick="this.src = '{:rtrim('__PUBLIC__', '/')}/captcha?r=' + Math.random();"/>
@@ -46,7 +50,7 @@
                     </div>
                 </div>
                 <div class="layui-form-item" style="margin-bottom: 20px;">
-                    <input type="checkbox" name="remember" lay-skin="primary" title="记住密码">
+                    <input type="checkbox" name="keeplogin" lay-skin="primary" value="1" title="记住密码">
                     <a href="{:url('Index/forget')}" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
                 </div>
                 <div class="layui-form-item">
@@ -72,17 +76,20 @@
         skin: 'layui-layer-we'
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index', 'user'], function(){
+    }).link(
+        " __STATIC__/style/jquery.validator.css"
+    ).use(['index', 'user','formValidator'], function(){
         var $ = layui.$
             ,setter = layui.setter
             ,admin = layui.admin
             ,form = layui.form
             ,router = layui.router()
-            ,search = router.search;
+            ,search = router.search
+            ,formValidator = layui.formValidator;
             form.render();
-
+            formValidator.api.bindevent($("form#formRule"));
         //提交
-        form.on('submit(LAY-user-login-submit)', function(obj){
+        /*form.on('submit(LAY-user-login-submit)', function(obj){
 
             //请求登入接口
             admin.req({
@@ -107,7 +114,7 @@
                 }
             });
 
-        });
+        });*/
 
 
         //实际使用时记得删除该代码
