--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -11,7 +11,7 @@
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
 
-                <iframe src="home/console.html" frameborder="0" class="layadmin-iframe"></iframe>
+                <iframe src="{:url('dashboard/detail')}" frameborder="0" class="layadmin-iframe"></iframe>
 
             </div>
         </div>
