--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -87,7 +87,7 @@
             table : "rule",
             tableid : "tableReload",
             extend : {
-                "add_url": "{:url('admin/push/add','',false)}",
+                "add_url": "{:url('admin/push/edit','',false)}",
                 "edit_url": "{:url('admin/push/edit','',false)}/ids/",
                 "del_url": "{:url('admin/push/del','',false)}",
             }
