监听行工具事件，添加lay-url

--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -30,7 +30,7 @@
 
 <!--操作-->
 {:build_actionbar('actionbar',['edit','test', 'del'],[
-'test' => ['layui-btn layui-btn-xs', 'layui-icon layui-icon-circle', '发送测试']
+'test' => ['layui-btn layui-btn-xs', 'layui-icon layui-icon-circle', '发送测试','Push/push']
 ])}
 {/block}
 
@@ -105,7 +105,6 @@
          * 绑定监听事件
          * */
         weTable.api.bindevent();
-
     });
 </script>
 </body>
