--- a/application/admin/view/layout/default2.html
+++ b/application/admin/view/layout/default2.html
@@ -15,7 +15,7 @@
             {/block}
         </div>
 
-        {include file="common/footer" /}
+        <!--{include file="common/footer" /}-->
     </div>
 </div>
 <script src="__STATIC__/layui/layui.js"></script>
