--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -18,7 +18,7 @@
 
         <!-- 辅助元素，一般用于移动设备下遮罩 -->
         <div class="layadmin-body-shade" layadmin-event="shade"></div>
-        <!--{include file="common/footer" /}-->
+        {include file="common/footer" /}
     </div>
 </div>
 {/block}
