--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -11,7 +11,7 @@
                     <span class="layui-badge layui-bg-blue layuiadmin-badge">周</span>
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
-                    <p class="layuiadmin-big-font">9,999,666</p>
+                    <p class="layuiadmin-big-font" id="readCount">0</p>
                     <p>
                         总计访问量
                         <span class="layuiadmin-span-color">88万 <i class="layui-inline layui-icon layui-icon-flag"></i></span>
@@ -26,7 +26,7 @@
                     <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span>
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
-                    <p class="layuiadmin-big-font">33,555</p>
+                    <p class="layuiadmin-big-font" id="downloadCount">33,555</p>
                     <p>
                         新下载
                         <span class="layuiadmin-span-color">10% <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
 
-                    <p class="layuiadmin-big-font">999,666</p>
+                    <p class="layuiadmin-big-font" id="incomeCount">999,666</p>
                     <p>
                         总收入
                         <span class="layuiadmin-span-color">*** <i class="layui-inline layui-icon layui-icon-dollar"></i></span>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
 
-                    <p class="layuiadmin-big-font">66,666</p>
+                    <p class="layuiadmin-big-font" id="onlineCount">66,666</p>
                     <p>
                         最近一个月
                         <span class="layuiadmin-span-color">15% <i class="layui-inline layui-icon layui-icon-user"></i></span>
@@ -264,9 +264,19 @@
     }).extend({
         index: 'lib/index' //主入口模块
         ,sample:'sample'
-    }).use(['index','element','sample'], function(){
+    }).use(['index','element','sample','CountUp'], function(){
         var admin = layui.admin
-            ,element = layui.element;
+            ,element = layui.element
+            ,CountUp = layui.CountUp;
+
+        var readCount = new CountUp.CountUp("readCount", 0, 9999666);
+        var downloadCount = new CountUp.CountUp("downloadCount", 0, 33555);
+        var incomeCount = new CountUp.CountUp("incomeCount", 0, 999666);
+        var onlineCount = new CountUp.CountUp("onlineCount", 0, 666666);
+        readCount.start();
+        downloadCount.start();
+        incomeCount.start();
+        onlineCount.start();
     });
 </script>
 </body>
