--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -26,7 +26,7 @@
                     <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span>
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
-                    <p class="layuiadmin-big-font" id="downloadCount">33,555</p>
+                    <p class="layuiadmin-big-font" id="downloadCount">0</p>
                     <p>
                         新下载
                         <span class="layuiadmin-span-color">10% <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
 
-                    <p class="layuiadmin-big-font" id="incomeCount">999,666</p>
+                    <p class="layuiadmin-big-font" id="incomeCount">0</p>
                     <p>
                         总收入
                         <span class="layuiadmin-span-color">*** <i class="layui-inline layui-icon layui-icon-dollar"></i></span>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="layui-card-body layuiadmin-card-list">
 
-                    <p class="layuiadmin-big-font" id="onlineCount">66,666</p>
+                    <p class="layuiadmin-big-font" id="onlineCount">0</p>
                     <p>
                         最近一个月
                         <span class="layuiadmin-span-color">15% <i class="layui-inline layui-icon layui-icon-user"></i></span>
@@ -264,15 +264,15 @@
     }).extend({
         index: 'lib/index' //主入口模块
         ,sample:'sample'
-    }).use(['index','element','sample','CountUp'], function(){
+    }).use(['index','element','sample','countUp'], function(){
         var admin = layui.admin
             ,element = layui.element
-            ,CountUp = layui.CountUp;
+            ,countUp = layui.countUp;
 
-        var readCount = new CountUp.CountUp("readCount", 0, 9999666);
-        var downloadCount = new CountUp.CountUp("downloadCount", 0, 33555);
-        var incomeCount = new CountUp.CountUp("incomeCount", 0, 999666);
-        var onlineCount = new CountUp.CountUp("onlineCount", 0, 666666);
+        var readCount = new countUp.CountUp("readCount", 0, 9999666);
+        var downloadCount = new countUp.CountUp("downloadCount", 0, 33555);
+        var incomeCount = new countUp.CountUp("incomeCount", 0, 999666);
+        var onlineCount = new countUp.CountUp("onlineCount", 0, 666666);
         readCount.start();
         downloadCount.start();
         incomeCount.start();
